--- a/css/styles.css
+++ b/css/styles.css
@@ -21,10 +21,11 @@ div {
   background-image: url(https://st2.depositphotos.com/3764539/8227/v/950/depositphotos_82276846-stock-illustration-vector-flat-cartoon-cat-heads.jpg);
 
 }
+.flora {left: 450px; bottom: 200px}
 .meio {
   margin-left: 100px;
 }
-.benzinho {
+.titulo-central {
 padding: 40px;
 }
 .cloud1 {left: 1px; top: 500px; }
