--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,12 @@ body {
   font-family: "Comic Sans MS", "Comic Sans", cursive;
   font-size: 17px;
   margin: 0;
-
 }
 
 h1 {
   text-shadow: 3px 2px #e1f2fb;
+  font-family: Sacramento;
+  font-size: 50px;
 }
 
 hr {
@@ -16,21 +17,79 @@ hr {
   border-top-width: 5px;
   width: 5%;
 }
-img{position: relative;}
-div {
-  background-image: url(https://st2.depositphotos.com/3764539/8227/v/950/depositphotos_82276846-stock-illustration-vector-flat-cartoon-cat-heads.jpg);
 
+img {
+  position: relative;
 }
-.flora {left: 450px; bottom: 200px}
+
+.Cabeçario {
+  background-image: url(https://st2.depositphotos.com/3764539/8227/v/950/depositphotos_82276846-stock-illustration-vector-flat-cartoon-cat-heads.jpg);
+}
+.fundo1 {background-color: #00a8cc}
+.fundo2 {background-color: #0c7b93}
+.fundo3 {background-color: #27496d}
+.fundo4 {background-color: #10316b}
+.fundo5 {background-color: #142850}
+.fundo6 {background-color: #010a43}
+.fundo7 {background-color: #010038}
+.teste {
+ height: 20%;
+ width: 20%;
+}
+.flora {
+  left: 220px;
+  bottom: 200px;
+}
+.sylv {
+  left: 300px;
+  bottom: 127px;
+}
+
 .meio {
   margin-left: 100px;
+
 }
+
+.montain {
+  left: 300px
+}
+
 .titulo-central {
-padding: 40px;
+  padding: 40px;
 }
-.cloud1 {left: 1px; top: 500px; }
-.cloud2 {left: 550px; top: 300px; }
-.cloud3 {left: 100px}
-.cloud4 {left: 500px; top: 100px;}
-.cloud5 {left: 500px; top: 700px; }
-.cloud6 {left: 100px; top: 800px; }
+
+.cloud1 {
+  left: 1px;
+  top: 500px;
+}
+.cloud2 {
+  left: 550px;
+  top: 300px;
+}
+.cloud3 {
+  left: 100px
+}
+.cloud4 {
+  left: 500px;
+  top: 100px;
+}
+.cloud5 {
+  left: 500px;
+  top: 700px;
+}
+.cloud6 {
+  right: 370px;
+  top: 740px;
+}
+
+.star1 {
+  left: 400px;
+  top: 0px;
+}
+.star2 {
+  right: 500px;
+  top: 0px;
+width: 30%;
+height: 30%}
+.star3 {position: absolute;}
+.star4 {position: absolute;}
